# uvm-pocs-2-project

./: Hedonometer.csv  average_episode.py  generate_happiness_ranking.py  generate_ranking.py  generate_wordlist.py  generate_wordshift.py  happiness_timeseries.py  happiness_vs_wordcount.py  pyproject.toml  scrape.py  segmented_timeseries.py  sliding_window_timeseries.py  speaker_timeseries.py  st-tos-transcripts.csv  wordlist_episode_401.csv
.github/workflows/: python-tests.yml
lib/: happiness.py  scoring.py  transcript_parsing.py
ousiometry-data/: README.md  ousiometry_data.txt  ousiometry_data_augmented.tsv
tests/: test_happiness.py  test_scoring.py  test_transcript_parsing.py
tests/fixtures/: 401.htm
wordlists-ds9/: wordlist_Bashir.csv  wordlist_Dax.csv  wordlist_Dukat.csv  wordlist_Garak.csv  wordlist_Kira.csv  wordlist_Nog.csv  wordlist_O'Brien.csv  wordlist_Odo.csv  wordlist_Quark.csv  wordlist_Rom.csv  wordlist_Worf.csv
