[tool.poetry]
name = "uvm-pocs-2-project"
version = "0.1.0"
description = ""
authors = ["Philip Mueller <mail@philip.in-aachen.net>"]
license = "MIT"
readme = "README.md"
packages = [{include = "uvm_pocs_2_project"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12" # scipy wants us to use python <3.12
requests = "^2.28.2"
beautifulsoup4 = "^4.11.2"
pytest = "^7.2.1"
tqdm = "^4.64.1"
nltk = "^3.8.1"
matplotlib = "^3.7.0"
pandas = "^1.5.3"
shifterator = {path = "/home/philip/src/github.com/exterm/shifterator", develop = true}
scipy = "^1.10.1"
html5lib = "^1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
